font stack update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <style media="screen">
     body {
-      font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
+      font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
       line-height: 1.5;
       margin: 0;
       padding-left: 5%;
