--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,19 @@
   <title>Clearview Cleaning Solutions</title>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
+  <meta name="description" content="Your reliable cleaning and support services partner">
   <meta name="author" content="drew-jones.com">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/favicon/site.webmanifest">
-  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#009ddf">
-  <link rel="shortcut icon" href="/favicon/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/assets/favicon/site.webmanifest">
+  <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#009ddf">
+  <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
   <meta name="apple-mobile-web-app-title" content="Clearview">
   <meta name="application-name" content="Clearview">
   <meta name="msapplication-TileColor" content="#009ddf">
-  <meta name="msapplication-config" content="/favicon/browserconfig.xml">
+  <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
   <style media="screen">
@@ -41,7 +41,7 @@
       font-style: inherit;
     }
     .logo {
-      background-image: url(logo.svg);
+      background-image: url(/assets/logo.svg);
       background-repeat: no-repeat;
       height: 2em;
     }
