adding less-watch-compiler

--- a/src/index.html
+++ b/src/index.html
@@ -21,44 +21,7 @@
   <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <style media="screen">
-    body {
-      font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
-      line-height: 1.5;
-      margin: 0;
-      padding-left: 5%;
-      padding-right: 5%;
-    }
-    p {
-      max-width: 32em;
-    }
-    main {
-      max-width: 50em;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    address {
-      font-style: inherit;
-    }
-    .logo {
-      background-image: url(/assets/logo.svg);
-      background-repeat: no-repeat;
-      height: 2em;
-    }
-    .sr-only {
-      border: 0;
-      clip: rect(1px, 1px, 1px, 1px);
-      -webkit-clip-path: inset(50%);
-      clip-path: inset(50%);
-      height: 1px;
-      margin: -1px;
-      overflow: hidden;
-      padding: 0;
-      position: absolute;
-      width: 1px;
-      white-space: nowrap;
-    }
-  </style>
+  <link rel="stylesheet" href="/assets/styles.css">
 
 </head>
 
@@ -80,8 +43,8 @@
       <li>Industrial cleaning</li>
       <li>Carpet cleaning</li>
       <li>Cladding cleaning</li>
-      <li>End of lets</li>
-      <li>Deep cleans</li>
+      <li>End of let cleaning</li>
+      <li>Deep clean</li>
     </ul>
     <h3>Why Clearview Cleaning Solutions?</h3>
     <p>If you are looking for an exceptional reliable cleaning and support services partner, we are the contractor of choice.</p>
